<resources>
    <string name="app_name">FestivAPP</string>
    <string name="API_KEY">BsmQKU834Qlfu4Ap</string>

    <string name="main_btn_search">Search</string>
    <string name="main_btn_favorites">Favorites</string>
    <string name="main_btn_pending">Upcoming</string>
    <string name="main_btn_attended">Attended</string>
    <string name="main_label_myevents">My Events</string>

    <string name="finder_label_name">Name</string>
    <string name="finder_hint_name"> Input Name</string>
    <string name="finder_label_location">Location*</string>
    <string name="finder_hint_location">Input Location</string>
    <string name="finder_label_date">Date</string>
    <string name="finder_label_date_from">From</string>
    <string name="finder_label_date_to">To</string>
    <string name="finder_hint_date">YYYY-MM-DD</string>
    <string name="finder_btn_search">SEARCH</string>
    <string name="placeholder">[PLACEHOLDER]</string>
    <string name="details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="event_btn_link">SongKick</string>
    <string name="finder_label_type">Type*</string>

    <string name="finder_error_no_location">Please select a location.</string>
    <string name="finder_error_location_invalid">Incorrect location, please select a correct one.</string>
    <string name="finder_error_no_type_selected">No type of event has been selected.</string>
    <string name="finder_error_no_end_date_selected">If start date is selected, end date must be selected too.</string>
    <string name="finder_error_dates_invalid">End date must be settled after Start date.</string>

    <string name="toast_add_favorites">Event added to favorites</string>
    <string name="toast_add_pending">Event added to upcoming</string>
    <string name="toast_add_assisted">Event added to assisted</string>
    <string name="toast_removed_favor">Event removed from favorites</string>
    <string name="toast_removed_pending">Event removed from upcoming</string>
    <string name="toast_removed_assisted">Event removed from assisted</string>

    <string name="event">Event</string>
    <string name="event_title"> Title name 2018</string>
    <string name="event_artists">"Artist1, Artist2, ArtistGroup3, Artistgroup4, Artist5, ArtistBand6, Artistband7"</string>
    <string name="event_label_location">Location</string>
    <string name="event_city_name">Cityname</string>
    <string name="event_exactlocation">RoyalTest Stadium 26, 60011</string>
    <string name="event_label_date">Date</string>
    <string name="event_btn_songkick">SongKick Web</string>
    <string name="event_btn_where">Where to Find</string>

    <string name="general_concert">Concert</string>
    <string name="general_festival">Festival</string>

    <string name="test_short">Test name</string>
    <string name="test_medium">Test name medium</string>
    <string name="test_large">Long test name for secondary text</string>
    <string name="test_date">1997-03-19</string>


    <string-array name="locations">
        <item>Alava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almeria</item>
        <item>Asturias</item>
        <item>Avila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Caceres</item>
        <item>Cadiz</item>
        <item>Cantabria</item>
        <item>Castellon</item>
        <item>Ciudad Real</item>
        <item>Cordoba</item>
        <item>Cuenca</item>
        <item>Gerona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipuzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaen</item>
        <item>La Coruña</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>Leon</item>
        <item>Lleida</item>
        <item>Madrid</item>
        <item>Malaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Orense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>

    <string-array name="finder_menu_list">
        <item>Favorites</item>
        <item>Upcoming</item>
        <item>Attended</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_event">Event</string>


</resources>
