<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FinderActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:layout_marginBottom="10dp"
    >


    <TextView
        android:id="@+id/finder_label_name"
        android:text="@string/finder_label_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primaryText"
        />

    <EditText
        android:id="@+id/finder_et_name"
        android:hint="@string/finder_hint_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/finder_label_name"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        android:paddingLeft="8dp"
      />


    <TextView
        android:id="@+id/finder_label_location"
        android:text="@string/finder_label_location"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finder_et_name"
        android:textColor="@color/primaryText"
        />

    <AutoCompleteTextView
        android:id="@+id/finder_et_location"
        android:hint="@string/finder_hint_location"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/finder_label_location"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        android:paddingLeft="8dp"
        />

    <TextView
        android:id="@+id/finder_label_date"
        android:layout_width="match_parent"

        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/finder_label_date"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        app:layout_constraintTop_toBottomOf="@+id/finder_et_location"
        tools:layout_editor_absoluteX="12dp"
        android:textColor="@color/primaryText"/>

    <LinearLayout
        android:id="@+id/finder_layout_date"

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/finder_label_date"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/finder_label_date_from"
                android:text="@string/finder_label_date_from"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/finder_et_date_from"
                android:hint="@string/finder_hint_date"

                app:layout_constraintTop_toBottomOf="@id/finder_label_date_from"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/finder_label_date_to"
                android:text="@string/finder_label_date_to"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/finder_et_date_to"
                android:hint="@string/finder_hint_date"

                app:layout_constraintTop_toBottomOf="@id/finder_label_date_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/finder_label_type"
        android:text="@string/finder_label_type"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primaryText"
        app:layout_constraintTop_toBottomOf="@id/finder_layout_date"/>

    <CheckBox
        android:id="@+id/finder_checkbox_festival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_festival"
        app:layout_constraintTop_toBottomOf="@id/finder_label_type"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <CheckBox
        android:id="@+id/finder_checkbox_concert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_concert"
        app:layout_constraintTop_toBottomOf="@id/finder_label_type"
        app:layout_constraintStart_toEndOf="@id/finder_checkbox_festival"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/finder_btn_search"
        android:text="@string/finder_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        app:layout_constraintTop_toBottomOf="@id/finder_checkbox_concert"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"/>






</android.support.constraint.ConstraintLayout>