<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FinderMainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:openDrawer="start"
    >


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:layout_marginBottom="10dp"
    >





    <TextView
        android:id="@+id/finder_label_name"
        android:text="@string/finder_label_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/finder_et_name"
        android:hint="@string/finder_hint_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/finder_label_name"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        android:paddingLeft="8dp"
      />


    <TextView
        android:id="@+id/finder_label_location"
        android:text="@string/finder_label_location"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finder_et_name"
        />

    <AutoCompleteTextView
        android:id="@+id/finder_et_location"
        android:hint="@string/finder_hint_location"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/finder_label_location"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        android:paddingLeft="8dp"
        />

    <TextView
        android:id="@+id/finder_label_date"
        android:layout_width="match_parent"

        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/finder_label_date"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/finder_label_name"
        app:layout_constraintTop_toBottomOf="@+id/finder_et_location"
        tools:layout_editor_absoluteX="12dp" />

    <LinearLayout
        android:id="@+id/finder_layout_date"

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/finder_label_date"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/finder_label_date_from"
                android:text="@string/finder_label_date_from"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/finder_et_date_from"
                android:hint="@string/finder_hint_date"

                app:layout_constraintTop_toBottomOf="@id/finder_label_date_from"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/finder_label_date_to"
                android:text="@string/finder_label_date_to"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/finder_et_date_to"
                android:hint="@string/finder_hint_date"

                app:layout_constraintTop_toBottomOf="@id/finder_label_date_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    <Button
        android:id="@+id/finder_btn_search"
        android:text="@string/finder_btn_search"


        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        app:layout_constraintTop_toBottomOf="@id/finder_layout_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"/>




</android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/finder_menu_layout"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/icons">

        <LinearLayout
            android:id="@+id/finder_menu_header_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/placeholder"
                android:textColor="@color/icons"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/finder_menu_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/finder_menu_header_layout">

        </android.support.v7.widget.RecyclerView>


    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.DrawerLayout>