<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:padding="8dp">

    <Button
        android:id="@+id/main_btn_search"

        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/main_btn_search"
        android:textSize="40dp"
        android:drawableLeft="@mipmap/ic_search"
        android:drawableTint="@color/icons"
        android:backgroundTint="@color/colorPrimary"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:paddingLeft="80dp"
        android:paddingRight="40dp"
        android:elevation="8dp"
        android:textColor="@color/icons"
        android:textAlignment="textStart"
        />

    <TextView
        android:id="@+id/main_label_myevents"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_label_myevents"
        app:layout_constraintTop_toBottomOf="@id/main_btn_search"
        android:textColor="@color/primaryText"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/main_btn_favorites"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/main_btn_favorites"
        android:textSize="40dp"
        android:drawableLeft="@mipmap/ic_favorite"
        android:drawableTint="@color/icons"
        android:backgroundTint="@android:color/holo_orange_light"
        style="@style/Base.TextAppearance.AppCompat.Button"
        app:layout_constraintTop_toBottomOf="@+id/main_label_myevents"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:elevation="8dp"
        android:textColor="@color/icons"
        />
    <Button
        android:id="@+id/main_btn_pending"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/main_btn_pending"
        android:textSize="40dp"
        android:drawableLeft="@mipmap/ic_pending"
        android:backgroundTint="@android:color/holo_red_light"
        style="@style/Base.TextAppearance.AppCompat.Button"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_favorites"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:drawableTint="@color/icons"
        android:elevation="8dp"
        android:textColor="@color/icons"/>
    <Button
        android:id="@+id/main_btn_assisted"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/main_btn_attended"
        android:textSize="40dp"
        android:drawableLeft="@mipmap/ic_assisted"
        android:drawableTint="@color/icons"
        android:backgroundTint="@android:color/darker_gray"
        style="@style/Base.TextAppearance.AppCompat.Button"

        app:layout_constraintTop_toBottomOf="@+id/main_btn_pending"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:elevation="8dp"
        android:textColor="@color/icons"/>

</android.support.constraint.ConstraintLayout>
</layout>