<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    android:elevation="8dp"
    android:background="@color/icons">

   <ImageView
       android:id="@+id/eventlist_item_imageview"
       android:layout_width="match_parent"
       android:layout_height="80dp"
       android:background="@drawable/image_festival_1"/>

    <TextView
        android:id="@+id/eventlist_item_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eventlist_item_imageview"
        android:text="@string/test_medium"
        android:layout_marginStart="4dp"
        android:textSize="16dp"
        android:textColor="@color/primaryText"/>

    <TextView
        android:id="@+id/eventlist_item_label_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/eventlist_item_label_name"
        android:text="@string/test_large"
        />

    <TextView
        android:id="@+id/evenlist_item_label_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eventlist_item_label_city"
        android:textSize="16dp"
        app:layout_goneMarginEnd="4dp"
        android:text="@string/test_date"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginEnd="4dp"/>



</android.support.constraint.ConstraintLayout>